--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ header {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    width: 20%;
+    width: 11rem;
     height: 30%;
 }
 
