--- a/style.css
+++ b/style.css
@@ -3,17 +3,18 @@ body {
 }
 
 header {
-    background-color: brown;
+    background-color: rgb(223, 17, 17);
 }
 
 .main1 {
     background-color: cadetblue;
     display: flex;
     justify-content: space-evenly;
-    flex-wrap: wrap;
+    flex-wrap:nowrap;
     align-items: center;
     height: 90%;
     width: 100%;
+    margin-top: 3rem;
 }
 
 .scorebox {
@@ -28,7 +29,5 @@ header {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    width: 11rem;
-    height: 30%;
+    height: max-content;
 }
-
